@@ -21,14 +21,14 @@ my @types = map { ( "sint$_" , "uint$_" ) }
 foreach my $type (@types)
 {
   subtest $type => sub {
-    my $ffi = FFI::Platypus->new( api => 1, experimental => 1 );
+    my $ffi = FFI::Platypus->new( api => 1 );
     my $f = $ffi->function(0 => [] => "object(Foo,$type)" );
     no_leaks_ok { $f->call };
   }
 }
 
 subtest 'opaque' => sub {
-  my $ffi    = FFI::Platypus->new( api => 1, experimental => 1, lib => [undef] );
+  my $ffi    = FFI::Platypus->new( api => 1, lib => [undef] );
   my $malloc = $ffi->function( malloc => [ 'size_t' ] => 'opaque' );
   my $free   = $ffi->function( free => [ 'opaque' ] => 'void' );
   my $ptr    = $malloc->call(200);
