@@ -20,7 +20,7 @@ foreach my $api (0, 1)
       warn $message;
     };
 
-    my $ffi = FFI::Platypus->new( api => $api, experimental => 1 );
+    my $ffi = FFI::Platypus->new( api => $api );
     $ffi->lib(find_lib lib => 'test', symbol => 'f0', libpath => 't/ffi');
     $ffi->type('uint64 *' => 'uint64_p');
     $ffi->type('uint64 [10]' => 'uint64_a');
@@ -105,7 +105,7 @@ subtest 'object' => sub {
 
   { package Roger }
 
-  my $ffi = FFI::Platypus->new( api => 1, experimental => 1 );
+  my $ffi = FFI::Platypus->new( api => 1 );
   $ffi->type('object(Roger,uint64)', 'roger_t');
 
   my $int = 211;
